--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,11 +2,14 @@
 <androidx.fragment.app.FragmentContainerView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:id="@+id/fragment_container_view"
+    android:id="@+id/nav_host_fragment"
     android:layout_height="match_parent"
     android:padding="16dp"
-    android:name="com.trungdunghoang125.secretmessages.WelcomeFragment"
+    android:name="androidx.navigation.fragment.NavHostFragment"
+    app:navGraph="@navigation/nav_graph"
+    app:defaultNavHost="true"
     tools:context=".MainActivity">
 
 </androidx.fragment.app.FragmentContainerView>
